--- a/index.html
+++ b/index.html
@@ -109,7 +109,10 @@ information?</li>
     <h2>Approach</h2>
   </hgroup>
   <article>
-    
+    <p>Figure 1: Example fold changes for markers of early immune response</p>
+
+<p><img src="assets/img/1-s2.0-S1046202313000960-gr1.jpg" alt="Fig1"></p>
+
   </article>
   <!-- Presenter Notes -->
 </slide>
@@ -126,12 +129,23 @@ information?</li>
 
       <slide class="" id="slide-5" style="background:;">
   <hgroup>
-    <h2>Results</h2>
+    <h2>Question: How often are p-value and/or FC cutoffs applied?</h2>
   </hgroup>
   <article>
-    <p>Figure 1: Example fold changes for markers of early immune response</p>
+    <h3>Approach</h3>
 
-<p><img src="assets/img/1-s2.0-S1046202313000960-gr1.jpg" alt="Fig1"></p>
+<ul class = "build">
+<li>Pulled 40 most recent papers in PubMed for query &quot;microarray expression
+profiling&quot; (...It would be interesting to know results for &quot;RNA-Seq&quot;)</li>
+</ul>
+
+<h3>Result</h3>
+
+<ul class = "build">
+<li>At least 50% of studied applied a FC cutoff (the rest used p-values only)</li>
+<li>This means that any biologically relevant DE genes below the FC cutoff
+will be missed.</li>
+</ul>
 
   </article>
   <!-- Presenter Notes -->
