--- a/index.html
+++ b/index.html
@@ -153,6 +153,31 @@ will be missed.</li>
 
       <slide class="" id="slide-6" style="background:;">
   <hgroup>
+    <h2>Question: What is the average fold change cutoff used?</h2>
+  </hgroup>
+  <article>
+    <h3>Approach</h3>
+
+<ul class = "build">
+<li>Sampled 10 papers for which FC filtering was used.</li>
+</ul>
+
+<h3>Result</h3>
+
+<ul class = "build">
+<li>Papers used a cutoff of either 1.5 or 2.0. (\(\mu = 1.725\))</li>
+<li>Authors also suggest, however, that based on MAQC study results, microarrays
+tend to underestimate the actual FC compared with qRTPCR (Canales et al. 
+2006).</li>
+<li>Adjusted microarray cutoff likely closer to 3.45.</li>
+</ul>
+
+  </article>
+  <!-- Presenter Notes -->
+</slide>
+
+      <slide class="" id="slide-7" style="background:;">
+  <hgroup>
     <h2>Question: Which statistical methods work best for detecting low FC genes?</h2>
   </hgroup>
   <article>
@@ -186,7 +211,7 @@ multiple testing with the Benjamini-Hochberg correction.</li>
   <!-- Presenter Notes -->
 </slide>
 
-      <slide class="" id="slide-7" style="background:;">
+      <slide class="" id="slide-8" style="background:;">
   <hgroup>
     <h2>Question: Which statistical methods work best for detecting low FC genes?</h2>
   </hgroup>
@@ -224,12 +249,17 @@ detect biologically meaningful enrichment at low FC.</li>
   <!-- Presenter Notes -->
 </slide>
 
-      <slide class="" id="slide-8" style="background:;">
+      <slide class="references" id="slide-9" style="background:;">
   <hgroup>
     <h2>References</h2>
   </hgroup>
   <article>
-    <!-- Custom JavaScript -->
+    <ul>
+<li>Roger D Canales, Yuling Luo, James C Willey, Bradley Austermiller, Catalin C Barbacioru, Cecilie Boysen, Kathryn Hunkapiller, Roderick V Jensen, Charles R Knight, Kathleen Y Lee, Yunqing Ma, Botoul Maqsodi, Adam Papallo, Elizabeth Herness Peters, Karen Poulter, Patricia L Ruppel, Raymond R Samaha, Leming Shi, Wen Yang, Lu Zhang, Federico M Goodsaid,   (2006) Evaluation of Dna Microarray Results With Quantitative Gene Expression Platforms.  <em>Nature Biotechnology</em>  <strong>24</strong>  1115-1122  <a href="http://dx.doi.org/10.1038/nbt1236">10.1038/nbt1236</a></li>
+<li>Georges St. Laurent, Dmitry Shtokalo, Michael R. Tackett, Zhaoqing Yang, Yuri Vyatkin, Patrice M. Milos, Bernd Seilheimer, Timothy A. McCaffrey, Philipp Kapranov,   (2013) on The Importance of Small Changes in Rna Expression.  <em>Methods</em>  <strong>63</strong>  18-24  <a href="http://dx.doi.org/10.1016/j.ymeth.2013.03.027">10.1016/j.ymeth.2013.03.027</a></li>
+</ul>
+
+<!-- Custom JavaScript -->
 
 <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.7.min.js"></script>
 
