--- a/index.html
+++ b/index.html
@@ -373,7 +373,50 @@ enrichment for some GO terms.</li>
   <!-- Presenter Notes -->
 </slide>
 
-      <slide class="references" id="slide-15" style="background:;">
+      <slide class="" id="slide-15" style="background:;">
+  <hgroup>
+    <h2>Question 6: What is the effect of having less replicates on detecting low FC DE genes?</h2>
+  </hgroup>
+  <article>
+    <h3>Approach</h3>
+
+<ol class = "build">
+<li>Starting with 7 replicates (inidividual mice) in control and 3h time points,
+progressively removed 1 replicate.</li>
+<li>Proceeded until 2 replicates for each condition remained.
+3  Measured effect on power to detect low FC DE genes.</li>
+</ol>
+
+  </article>
+  <!-- Presenter Notes -->
+</slide>
+
+      <slide class="" id="slide-16" style="background:;">
+  <hgroup>
+    <h2>Question 6: What is the effect of having less replicates on detecting low FC DE genes?</h2>
+  </hgroup>
+  <article>
+    <p>Figure 2. Number of replicates vs. enrichment of inflammation-related GO terms
+for transcripts with less than 2 FC.
+<img src="assets/img/1-s2.0-S1046202313000960-gr2.jpg" alt="Fig2"></p>
+
+  </article>
+  <!-- Presenter Notes -->
+</slide>
+
+      <slide class="" id="slide-17" style="background:;">
+  <hgroup>
+    <h2>Question 6: What is the effect of having less replicates on detecting low FC DE genes?</h2>
+  </hgroup>
+  <article>
+    <p>Table 4. Effect of reducing replicates on low FC genes.
+<img src="assets/img/table4.png" alt="Table4"></p>
+
+  </article>
+  <!-- Presenter Notes -->
+</slide>
+
+      <slide class="references" id="slide-18" style="background:;">
   <hgroup>
     <h2>References</h2>
   </hgroup>
