--- a/index.html
+++ b/index.html
@@ -106,10 +106,19 @@ information?</li>
 
       <slide class="" id="slide-3" style="background:;">
   <hgroup>
-    <h2>Approach</h2>
+    <h2>Overview</h2>
   </hgroup>
   <article>
-    
+    <blockquote>
+<p>-Used data from a previous study involving a time-course inflammation response
+with single-molecule sequencing (SMS) RNA-Seq.
+    * LPS stimulation of mice
+    * Control + 5 time-points
+    * 7 replicates (individual mice) per condition
+-Interested in looking at contribution of low FC genes and their biological
+  relevance.</p>
+</blockquote>
+
   </article>
   <!-- Presenter Notes -->
 </slide>
