--- a/index.html
+++ b/index.html
@@ -62,13 +62,35 @@
     .references li { font-size: 18px; }
 </style>
 
-<h2>Introduction</h2>
+<h2>Overview</h2>
 
   </article>
   <!-- Presenter Notes -->
 </slide>
 
       <slide class="" id="slide-2" style="background:;">
+  <hgroup>
+    <h2>Overview</h2>
+  </hgroup>
+  <article>
+    <ul class = "build">
+<li>Used data from a previous study involving a time-course inflammation response
+with single-molecule sequencing (SMS) RNA-Seq.
+
+<ul>
+<li>LPS stimulation of mice</li>
+<li>Control + 5 time-points</li>
+<li>7 replicates (individual mice) per condition</li>
+</ul></li>
+<li>Interested in looking at contribution of low FC genes and their biological
+relevance.</li>
+</ul>
+
+  </article>
+  <!-- Presenter Notes -->
+</slide>
+
+      <slide class="" id="slide-3" style="background:;">
   <hgroup>
     <h2>Motivation</h2>
   </hgroup>
@@ -99,25 +121,6 @@ increases/decreases in transcript levels.</li>
 information?</li>
 </ul></li>
 </ul>
-
-  </article>
-  <!-- Presenter Notes -->
-</slide>
-
-      <slide class="" id="slide-3" style="background:;">
-  <hgroup>
-    <h2>Overview</h2>
-  </hgroup>
-  <article>
-    <blockquote>
-<p>-Used data from a previous study involving a time-course inflammation response
-with single-molecule sequencing (SMS) RNA-Seq.
-    * LPS stimulation of mice
-    * Control + 5 time-points
-    * 7 replicates (individual mice) per condition
--Interested in looking at contribution of low FC genes and their biological
-  relevance.</p>
-</blockquote>
 
   </article>
   <!-- Presenter Notes -->
